fix: gitignore and Makefile

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,29 @@ isuumo/webapp/php/
 isuumo/webapp/python/
 isuumo/webapp/ruby/
 isuumo/webapp/rust/
+
+
+.bash_history
+.bash_logout
+.bashrc
+.bundle/
+.cache/
+.cargo/
+.composer/
+.config/
+.cpanm/
+.deno/
+.gem/
+.gitconfig
+.npm/
+.perl-cpm/
+.profile
+.rustup/
+.ssh/
+.vim/
+.viminfo
+.vscode-server/
+.wget-hsts
+env.sh
+go/
+local/
